feat: make changes to only use junit 5 for mvn package